tests/functional2/lang/parser-token-whitespace/[0.0.0].err.exp
error: whitespace between function arguments or list elements is required here. Use --extra-deprecated-features tokens-no-whitespace to disable this error
       at «string»:1:14:
            1| with {}; [0.0.0]
             |              ^
